--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,7 @@
-version: "2"
+import ruamel.yaml
+
+yaml_str = """\ 
+version: 2
 jobs:
 build:
 working_directory: ~/myapp
@@ -8,10 +11,14 @@ steps:
 - checkout:
 path: ~/myapp
 - restore_cache:
-key: angular-whishlist-{{ .Branch }}-{{ checksum "package-lock.json" }}
+key: angular-wishlist-{{ .Branch }}-{{ checksum "package-lock.json" }}
 - run: npm install
 - save_cache:
-key: angular-whishlist-{{ .Branch }}-{{ checksum "package-lock.json" }}
+key: angular-wishlist-{{ .Branch }}-{{ checksum "package-lock.json" }}
 paths:
 - "node_modules"
 - run: npm run test -- --progress=false --watch=false --browsers=ChromeHeadlessCI
+"""
+
+data = ruamel.yaml.round_trip_load(yaml_str)
+print(ruamel.yaml.round_trip_dump(data))
