--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,23 +1,23 @@
 import ruamel.yaml
 
-yaml_str = """\ 
-version: 2
+yaml_str = """\
+version: '2'
 jobs:
-build:
-working_directory: ~/myapp
-docker:
-- image: circleci/node:8-browsers
-steps:
-- checkout:
-path: ~/myapp
-- restore_cache:
-key: angular-wishlist-{{ .Branch }}-{{ checksum "package-lock.json" }}
-- run: npm install
-- save_cache:
-key: angular-wishlist-{{ .Branch }}-{{ checksum "package-lock.json" }}
-paths:
-- "node_modules"
-- run: npm run test -- --progress=false --watch=false --browsers=ChromeHeadlessCI
+  build:
+    working_directory: ~/myapp/angular-whishlist
+    docker:
+      - image: circleci/node:8-browsers
+    steps:
+      - checkout:
+          path: ~/myapp
+      - restore_cache:
+          key: angular-whishlist-{{ .Branch }}-{{ checksum "package-lock.json" }}
+      - run: npm install
+      - save_cache:
+          key: angular-whishlist-{{ .Branch }}-{{ checksum "package-lock.json" }}
+          paths:
+            - "node_modules"
+      - run: npm run test -- --progress=false --watch=false --browsers=ChromeHeadlessCI
 """
 
 data = ruamel.yaml.round_trip_load(yaml_str)
