--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,24 +1,43 @@
-import ruamel.yaml
+# Use the latest 2.1 version of CircleCI pipeline process engine.
+# See: https://circleci.com/docs/2.0/configuration-reference
+version: 2.1
 
-yaml_str = """\
-version: '2'
+# Define a job to be invoked later in a workflow.
+# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
   build:
-    working_directory: ~/myapp/angular-whishlist
-    docker:
-      - image: circleci/node:8-browsers
+    description: App Bundle Build
+    docker: 
+      - image: cirrusci/flutter
     steps:
-      - checkout:
-          path: ~/myapp
-      - restore_cache:
-          key: angular-whishlist-{{ .Branch }}-{{ checksum "package-lock.json" }}
-      - run: npm install
-      - save_cache:
-          key: angular-whishlist-{{ .Branch }}-{{ checksum "package-lock.json" }}
-          paths:
-            - "node_modules"
-      - run: npm run test -- --progress=false --watch=false --browsers=ChromeHeadlessCI
-"""
+      - checkout
+      - run: 
+          name: Build Flutter (Android)
+          command: |
+            flutter pub get
+            flutter clean
+            flutter build apk --release
+      - store_artifacts:
+            path: build/app/outputs/flutter-apk/app-release.apk
 
-data = ruamel.yaml.round_trip_load(yaml_str)
-print(ruamel.yaml.round_trip_dump(data))
+  test:
+    description: Flutter App Test
+    docker:
+      - image: cirrusci/flutter 
+    steps:
+      - checkout
+      - run:
+          name: Run Flutter Test and Analyze
+          command: |
+            flutter doctor
+            flutter pub get
+            flutter analyze
+            flutter test
+
+workflows:
+  build_and_test:
+    jobs:
+    - build
+    - test:
+        requires:
+          - build
