--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,17 @@
 version: 2
 jobs:
     build:
-      working_directory: ~/myapp
+      working_directory: ~/myapp/angular-wishlist
       docker:
         - image: circleci/node:8-browsers
       steps:
         - checkout:
         path: ~/myapp
         - restore_cache:
-            key: angular-whishlist-{{ .Branch }}-{{ checksum "package-lock.json" }}
+            key: angular-wishlist-{{ .Branch }}-{{ checksum "package-lock.json" }}
         - run: npm install
         - save_cache:
-            key: angular-whishlist-{{ .Branch }}-{{ checksum "package-lock.json" }}
+            key: angular-wishlist-{{ .Branch }}-{{ checksum "package-lock.json" }}
             paths:
               - "node_modules"
         - run: npm run test -- --progress=false --watch=false --browsers=ChromeHeadlessCI
